# ckanext-artesp_theme

./: .gitignore  Makefile  VALIDATORS_README.md  babel.cfg  compile_translations.py  conftest.py  dev-requirements.txt  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext-artesp_theme/: MANIFEST.in  README.md  pyproject.toml
ckanext-artesp_theme/ckanext/artesp_theme/: cli.py  plugin.py
ckanext-artesp_theme/ckanext/artesp_theme/assets/: script.js
ckanext-artesp_theme/ckanext/artesp_theme/assets/css/: user.css
ckanext-artesp_theme/ckanext/artesp_theme/i18n/pt_BR/LC_MESSAGES/: ckanext-artesp_theme.mo  ckanext-artesp_theme.po
ckanext-artesp_theme/ckanext/artesp_theme/logic/: action.py  validators.py
ckanext-artesp_theme/ckanext/artesp_theme/templates/: footer.html
ckanext-artesp_theme/ckanext/artesp_theme/templates/home/snippets/: featured_group.html  featured_organization.html  latest_datasets.html  search.html
ckanext-artesp_theme/ckanext/artesp_theme/templates/static/: about_ckan.html  privacy.html
ckanext-artesp_theme/ckanext/artesp_theme/templates/user/: new_user_form.html  perform_reset.html
ckanext-artesp_theme/ckanext/artesp_theme/tests/: test_helpers.py  test_views.py
ckanext-artesp_theme/ckanext/artesp_theme/tests/logic/: test_validators.py
ckanext/artesp_theme/: api.md  audit_model.py  controllers.py  dev_toolbar.py  (+7 more)
utils/: README.md  ckan_resources_export_20251111_165402.csv  ckan_resources_export_20251111_165402.json  extract_resources.py  seed_test_data.py  xdist_worker_setup.py
(+265 files in other folders)
