[project]
name = "ckanext-artesp_theme"
version = "0.0.1"
description = "CKAN ARTESP"
readme = "README.md"
authors = [
    {name = "Doretto", email = "carlos.doretto@artesp.sp.gov.br"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "ARTESP", "PORTAL", "DADOS", "ABERTOS", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/doretto/ckanext-artesp_theme"

[project.entry-points."ckan.plugins"]
artesp_theme = "ckanext.artesp_theme.plugin:ArtespThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
